# goit-pythonweb-hw-10

./: .gitignore  README.md  docker-compose.yml  env.example  logger.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 43d859c946f8_comment.py  b2729a02db6e_init.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py
src/services/: auth.py  contacts.py  email.py  users.py
